<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="com.dms.sms.feature.signup.viewmodel.SignUpViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_white_view"
    android:elevation="5dp"

    >


    <TextView
        android:id="@+id/validation_failed_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/notosanscjkkrregular"
        android:includeFontPadding="false"
        android:text="@string/validation_failed_tv"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/validation_failed_cancel_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/notosanscjkkrregular"
        android:includeFontPadding="false"
        android:text="@string/cancel_tv"
        android:onClick="@{()->vm.back()}"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/validation_failed_tv" />

    <TextView
        android:id="@+id/validation_retry_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="57dp"
        android:text="@string/validation_retry_tv"
        android:onClick="@{()->vm.retryVerification()}"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/validation_failed_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>