<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.dms.sms.feature.mypage.viewmodel.ChangePwViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.mypage.ChangePasswordFragment">

        <TextView
            android:id="@+id/change_password_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/change_password_title_tv"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/change_password_gl_left"
            app:layout_constraintTop_toTopOf="@+id/change_password_gl_top" />

        <ImageButton
            android:id="@+id/change_password_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/ic_back"
            android:padding="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/current_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintBottom_toTopOf="@+id/new_password_layout"
            app:layout_constraintEnd_toStartOf="@+id/change_password_gl_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/change_password_gl_left"
            app:layout_constraintTop_toBottomOf="@+id/change_password_title_tv">


            <TextView
                android:id="@+id/current_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/current_password_tv"
                android:textColor="@color/colorPurple"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/current_password_et_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint=" "
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_password_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/current_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/current_password_et"
                    android:inputType="textPassword"
                    android:text="@={vm.currentPw}"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/current_password_tv" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/new_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintBottom_toTopOf="@+id/new_password_confirm_layout"
            app:layout_constraintEnd_toStartOf="@+id/change_password_gl_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/change_password_gl_left"
            app:layout_constraintTop_toBottomOf="@+id/current_password_layout">

            <TextView
                android:id="@+id/new_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/new_password_tv"
                android:textColor="@color/colorPurple"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_et_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint=" "
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_password_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/new_password_et"
                    android:inputType="textPassword"
                    android:text="@={vm.newPw}"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_password_tv" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/new_password_confirm_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintBottom_toTopOf="@+id/change_password_btn"
            app:layout_constraintEnd_toStartOf="@+id/change_password_gl_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/change_password_gl_left"
            app:layout_constraintTop_toBottomOf="@+id/new_password_layout">

            <TextView
                android:id="@+id/new_password_confirm_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/new_password_confirm_tv"
                android:textColor="@color/colorPurple"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_confirm_et_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint=" "
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_password_confirm_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_confirm_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password_confirm_et"
                    android:inputType="textPassword"
                    android:text="@={vm.confirmPw}"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_password_confirm_tv" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/change_password_gl_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/change_password_gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/change_password_gl_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.88" />

        <Button
            android:id="@+id/change_password_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="132dp"
            android:background="@{!vm.pwMediatorLiveData ? @drawable/radius_gray_view : @drawable/radius_purple_view}"
            android:clickable="@{vm.pwMediatorLiveData}"
            android:text="@string/confirm_tv"
            android:onClick="@{()->vm.clickChangePw()}"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/change_password_gl_right"
            app:layout_constraintStart_toStartOf="@+id/change_password_gl_left"
            app:layout_constraintTop_toBottomOf="@+id/new_password_confirm_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>